<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.invaderzimfandetector.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--INITIAL IMAGE AND TEXT-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/invader_zim_intro3" />

        <TextView
            style="@style/IntroText"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/Intro" />

        <EditText
            android:id="@+id/userName"
            style="@style/NameField"
            android:hint="@string/EditTextHint"
            android:inputType="textCapWords" />

        <!--1. DIVIDER LINE AND RELEVANT CIRCULAR IMAGE ABOVE EACH QUESTION-->
        <View style="@style/DividerLine" />

        <de.hdodenhof.circleimageview.CircleImageView
            style="@style/CircleImage"
            android:src="@drawable/zim_house2"
            app:civ_border_color="@color/BrightGreen"
            app:civ_border_width="4dp" />

        <!--FIRST QUESTION-->
        <TextView
            android:id="@+id/question1"
            style="@style/Questions"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/Question1" />

        <!--FIRST QUESTION'S ANSWER OPTIONS-->
        <RadioGroup
            style="@style/RadioGroup"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="8dp">

            <RadioButton
                android:id="@+id/q1a1"
                style="@style/RadioButtons"
                android:buttonTint="@color/BrightGreen"
                android:onClick="onRadioButton1Clicked"
                android:text="@string/Q1_Answer1" />

            <RadioButton
                android:id="@+id/q1a2"
                style="@style/RadioButtons"
                android:buttonTint="@color/BrightGreen"
                android:onClick="onRadioButton1Clicked"
                android:text="@string/Q1_Answer2" />
        </RadioGroup>

        <!--2. DIVIDER LINE AND RELEVANT CIRCULAR IMAGE ABOVE EACH QUESTION-->
        <View style="@style/DividerLine" />

        <de.hdodenhof.circleimageview.CircleImageView
            style="@style/CircleImage"
            android:src="@drawable/gir_food"
            app:civ_border_color="@color/BrightGreen"
            app:civ_border_width="4dp" />

        <!--SECOND QUESTION-->
        <TextView
            android:id="@+id/question2"
            style="@style/Questions"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/Question2" />

        <!--SECOND QUESTION'S ANSWER OPTIONS-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="14dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/q2a1"
                style="@style/Checkboxes"
                android:buttonTint="@color/BrightGreen"
                android:onClick="onCheckboxes1Checked"
                android:text="@string/Q2_Answer1" />

            <CheckBox
                android:id="@+id/q2a2"
                style="@style/Checkboxes"
                android:buttonTint="@color/BrightGreen"
                android:onClick="onCheckboxes1Checked"
                android:text="@string/Q2_Answer2" />

            <CheckBox
                android:id="@+id/q2a3"
                style="@style/Checkboxes"
                android:buttonTint="@color/BrightGreen"
                android:onClick="onCheckboxes1Checked"
                android:text="@string/Q2_Answer3" />

            <CheckBox
                android:id="@+id/q2a4"
                style="@style/Checkboxes"
                android:buttonTint="@color/BrightGreen"
                android:onClick="onCheckboxes1Checked"
                android:text="@string/Q2_Answer4" />

        </LinearLayout>

        <!--3. DIVIDER LINE AND RELEVANT CIRCULAR IMAGE ABOVE EACH QUESTION-->
        <View style="@style/DividerLine" />

        <de.hdodenhof.circleimageview.CircleImageView
            style="@style/CircleImage"
            android:src="@drawable/zim_friend"
            app:civ_border_color="@color/BrightGreen"
            app:civ_border_width="4dp" />

        <!--THIRD QUESTION-->
        <TextView
            android:id="@+id/question3"
            style="@style/Questions"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/Question3" />

        <!--THIRD QUESTION'S ANSWER OPTIONS-->
        <RadioGroup
            style="@style/RadioGroup"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="62dp">

            <RadioButton
                android:id="@+id/q3a1"
                style="@style/RadioButtons"
                android:buttonTint="@color/BrightGreen"
                android:onClick="onRadioButton2Clicked"
                android:text="@string/Q3_Answer1" />

            <RadioButton
                android:id="@+id/q3a2"
                style="@style/RadioButtons"
                android:buttonTint="@color/BrightGreen"
                android:onClick="onRadioButton2Clicked"
                android:text="@string/Q3_Answer2" />

            <RadioButton
                android:id="@+id/q3a3"
                style="@style/RadioButtons"
                android:buttonTint="@color/BrightGreen"
                android:onClick="onRadioButton2Clicked"
                android:text="@string/Q3_Answer3" />

        </RadioGroup>

        <!--4. DIVIDER LINE AND RELEVANT CIRCULAR IMAGE ABOVE EACH QUESTION-->
        <View style="@style/DividerLine" />

        <de.hdodenhof.circleimageview.CircleImageView
            style="@style/CircleImage"
            android:src="@drawable/gaz"
            app:civ_border_color="@color/BrightGreen"
            app:civ_border_width="4dp" />

        <!--FORTH QUESTION-->
        <TextView
            android:id="@+id/question4"
            style="@style/Questions"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/Question4" />

        <!--FORTH QUESTION'S ANSWER OPTIONS-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/q4a1"
                style="@style/Checkboxes"
                android:buttonTint="@color/BrightGreen"
                android:onClick="onCheckboxes2Checked"
                android:text="@string/Q4_Answer1" />

            <CheckBox
                android:id="@+id/q4a2"
                style="@style/Checkboxes"
                android:buttonTint="@color/BrightGreen"
                android:onClick="onCheckboxes2Checked"
                android:text="@string/Q4_Answer2" />

            <CheckBox
                android:id="@+id/q4a3"
                style="@style/Checkboxes"
                android:buttonTint="@color/BrightGreen"
                android:onClick="onCheckboxes2Checked"
                android:text="@string/Q4_Answer3" />

        </LinearLayout>

        <!--5. DIVIDER LINE AND RELEVANT CIRCULAR IMAGE ABOVE EACH QUESTION-->
        <View style="@style/DividerLine" />

        <de.hdodenhof.circleimageview.CircleImageView
            style="@style/CircleImage"
            android:src="@drawable/zitboy"
            app:civ_border_color="@color/BrightGreen"
            app:civ_border_width="4dp" />

        <!--FIFTH QUESTION-->
        <TextView
            android:id="@+id/question5"
            style="@style/Questions"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/Question5" />

        <!--FIFTH QUESTION'S ANSWER OPTIONS-->
        <RadioGroup
            style="@style/RadioGroup"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="27dp">

            <RadioButton
                android:id="@+id/q5a1"
                style="@style/RadioButtons"
                android:buttonTint="@color/BrightGreen"
                android:onClick="onRadioButton3Clicked"
                android:text="@string/Q5_Answer1" />

            <RadioButton
                android:id="@+id/q5a2"
                style="@style/RadioButtons"
                android:buttonTint="@color/BrightGreen"
                android:onClick="onRadioButton3Clicked"
                android:text="@string/Q5_Answer2" />

            <RadioButton
                android:id="@+id/q5a3"
                style="@style/RadioButtons"
                android:buttonTint="@color/BrightGreen"
                android:onClick="onRadioButton3Clicked"
                android:text="@string/Q5_Answer3" />
        </RadioGroup>

        <!--6. DIVIDER LINE AND RELEVANT CIRCULAR IMAGE ABOVE EACH QUESTION-->
        <View style="@style/DividerLine" />

        <de.hdodenhof.circleimageview.CircleImageView
            style="@style/CircleImage"
            android:src="@drawable/gir_singing"
            app:civ_border_color="@color/BrightGreen"
            app:civ_border_width="4dp" />

        <!--SIXTH QUESTION-->
        <TextView
            android:id="@+id/question6"
            style="@style/Questions"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/Question6" />

        <!--SIXTH QUESTION'S ANSWER OPTIONS-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/q6a1"
                style="@style/Checkboxes"
                android:buttonTint="@color/BrightGreen"
                android:onClick="onCheckboxes3Checked"
                android:text="@string/Q6_Answer1" />

            <CheckBox
                android:id="@+id/q6a2"
                style="@style/Checkboxes"
                android:buttonTint="@color/BrightGreen"
                android:onClick="onCheckboxes3Checked"
                android:text="@string/Q6_Answer2" />

            <CheckBox
                android:id="@+id/q6a3"
                style="@style/Checkboxes"
                android:buttonTint="@color/BrightGreen"
                android:onClick="onCheckboxes3Checked"
                android:text="@string/Q6_Answer3" />

        </LinearLayout>

        <!--7. DIVIDER LINE AND RELEVANT CIRCULAR IMAGE ABOVE EACH QUESTION-->
        <View style="@style/DividerLine" />

        <de.hdodenhof.circleimageview.CircleImageView
            style="@style/CircleImage"
            android:src="@drawable/zim_career"
            app:civ_border_color="@color/BrightGreen"
            app:civ_border_width="4dp" />

        <!--SEVENTH QUESTION-->
        <TextView
            android:id="@+id/question7"
            style="@style/Questions"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/Question7" />

        <!--SEVENTH QUESTION'S ANSWER OPTIONS-->
        <RadioGroup
            style="@style/RadioGroup"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="12dp">

            <RadioButton
                android:id="@+id/q7a1"
                style="@style/RadioButtons"
                android:buttonTint="@color/BrightGreen"
                android:onClick="onRadioButton4Clicked"
                android:text="@string/Q7_Answer1" />

            <RadioButton
                android:id="@+id/q7a2"
                style="@style/RadioButtons"
                android:buttonTint="@color/BrightGreen"
                android:onClick="onRadioButton4Clicked"
                android:text="@string/Q7_Answer2" />

            <RadioButton
                android:id="@+id/q7a3"
                style="@style/RadioButtons"
                android:buttonTint="@color/BrightGreen"
                android:onClick="onRadioButton4Clicked"
                android:text="@string/Q7_Answer3" />

        </RadioGroup>

        <!--PADDING BETWEEN QUESTION AND BUTTON-->
        <View style="@style/DividerLine" />

        <!--SUBMIT BUTTON-->
        <Button
            style="@style/SubmitButton"
            android:background="@drawable/button1_click"
            android:onClick="displayScore"
            android:text="@string/SubmitButton" />

    </LinearLayout>

</ScrollView>